resume index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <table>
         <tr>
-            <td>    <img width=300 src="images/my image.jpg" alt="saurabh karn's photo"></td>
+            <td>    <img width=300 src="saurabh/images/my image.jpg" alt="saurabh karn's photo"></td>
             <td>    <h1>Saurabh Kumar</h1>
                 <p><i><a href="http://google.com">Automobile Engineer</a></i></p>
                 <p>I ❤️ web development and here to guide the coding enthusiast</p>
